quorum/test/tests/templating/Pass/PassTextTakesText_7.quorum
class main
    action main
        Test<text> something
        something:doSomething("text")
    end
end