quorum/test/tests/templating/Fail/TypeCheckTemplatedChildOfTempClass_12.quorum
class main
    action main
        B<integer> b
        b:setSomething("wow!")
    end
end